Ajout des animations de validation et de coeur sur tous les menus + lien vers mail sur contact

--- a/rest1.html
+++ b/rest1.html
@@ -30,7 +30,14 @@
         <section class="menu">
             <div class="menu__title">
                 <h1>La palette du goût</h1>
-                <img class="menu__heart" src="/images/icons/heart.svg"/>
+                <div class="icons menu__heart">
+                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                </div>
             </div>
 
             <h4 class="menu__subtitle">ENTRÉES</h4>
@@ -173,7 +180,7 @@
                 <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                 <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <li>Contact</li>
+                <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
         </footer>
     </body>
