--- a/rest2.html
+++ b/rest2.html
@@ -30,100 +30,158 @@
         <section class="menu">
             <div class="menu__title">
                 <h1>La note enchantée</h1>
-                <img class="menu__heart" src="/images/icons/heart.svg"/>
+                <div class="icons menu__heart">
+                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                </div>
             </div>
 
             <h4 class="menu__subtitle">ENTRÉES</h4>
             <div class="menu__box">
-                <button class="menu__box--btn" class="--child-1">
-                    <p class="menu__box--plat">Ravioles de foie gras</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Accompagnés de leur crème à la truffe</p>
-                        <p class="menu__box--prix">25€</p>
+                        <p class="menu__box--plat">Ravioles de foie gras</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Accompagnés de leur crème à la truffe</p>
+                            <p class="menu__box--prix">25€</p>
+                        </div>      
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn" class="--child-2">
-                    <p class="menu__box--plat">Caviar osciètre</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Sur blini à la farine de blé noir</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Caviar osciètre</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Sur blini à la farine de blé noir</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn" class="--child-3">
-                    <p class="menu__box--plat">Homard et espuma de langoustines</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Mariné aux zests d'orange</p>
-                        <p class="menu__box--prix">20€</p>
+                        <p class="menu__box--plat">Homard et espuma de chou-fleur</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Mariné aux zests d'orange</p>
+                            <p class="menu__box--prix">20€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn" class="--child-4">
-                    <p class="menu__box--plat">Foie gras de canard cuit entier</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Confiture de figue et pain toasté</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Foie gras de canard cuit entier</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Confiture de figue et pain toasté</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">PLATS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Noix de coquilles Saint-Jacques</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Sur lit de purée de céleri-rave</p>
-                        <p class="menu__box--prix">40€</p>
+                        <p class="menu__box--plat">Noix de coquilles Saint-Jacques</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Sur lit de purée de céleri-rave</p>
+                            <p class="menu__box--prix">40€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Langoustine poêlée</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Purée de patate douce</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Langoustine poêlée</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Purée de patate douce</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Mijoté de queue de boeuf</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et riz sauvage aux zests de citron</p>
-                        <p class="menu__box--prix">44€</p>
+                        <p class="menu__box--plat">Mijoté de queue de boeuf</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et riz sauvage aux zests de citron</p>
+                            <p class="menu__box--prix">44€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">DESSERTS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Macaron noisette et chocolat</p>
-                    <div class="menu__box--content">
-                        <p class="menu__box--misc">Glace au caramel brun et sel de Guérande</p>
-                        <p class="menu__box--prix">18€</p>
-                    </div>
-                </button>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Baba au rhum revisité</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Avec son coulis de citron</p>
-                        <p class="menu__box--prix">22€</p>
+                        <p class="menu__box--plat">Macaron noisette et chocolat</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Glace au caramel brun et sel de Guérande</p>
+                            <p class="menu__box--prix">18€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Tarte au citron meringuée</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Destructurée</p>
-                        <p class="menu__box--prix">23€</p>
+                        <p class="menu__box--plat">Baba au rhum revisité</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Avec son coulis de citron</p>
+                            <p class="menu__box--prix">22€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="menu__box--btn">
+                    <div class="menu__box--content">
+                        <p class="menu__box--plat">Tarte au citron meringuée</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Destructurée</p>
+                            <p class="menu__box--prix">23€</p>
+                        </div>
+                    </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>    
             </div>  
 
             <div class="order">
-                <button class="order--btn">Commander</button>
+                <a class="order--btn">Commander</a>
             </div>
             
         </section>
@@ -135,7 +193,7 @@
                 <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                 <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <li>Contact</li>
+                <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
         </footer>
     </body>
