--- a/rest3.html
+++ b/rest3.html
@@ -30,94 +30,147 @@
         <section class="menu">
             <div class="menu__title">
                 <h1>À la française</h1>
-                <img class="menu__heart" src="/images/icons/heart.svg"/>
+                <div class="icons menu__heart">
+                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                </div>
             </div>
 
             <h4 class="menu__subtitle">ENTRÉES</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Tartare de poulpe acidulé</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Aux zests d'orange</p>
-                        <p class="menu__box--prix">25€</p>
+                        <p class="menu__box--plat">Tartare de poulpe acidulé</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Aux zests d'orange</p>
+                            <p class="menu__box--prix">25€</p>
+                        </div>      
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Velouté de légumes d'antan</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Carotte, panais, topinambour</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Velouté de légumes d'antan</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Carotte, panais, topinambour</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Soupe à l'oignon</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Revisitée</p>
-                        <p class="menu__box--prix">20€</p>
+                        <p class="menu__box--plat">Soupe à l'oignon</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Revisitée</p>
+                            <p class="menu__box--prix">20€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">PLATS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Coquilles Saint-Jacques</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Accompagnées d'une purée de panais</p>
-                        <p class="menu__box--prix">40€</p>
+                        <p class="menu__box--plat">Coquilles Saint-Jacques</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Accompagnées d'une purée de panais</p>
+                            <p class="menu__box--prix">40€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Magret de canard</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et parmentier de pommes de terres</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Magret de canard</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et parmentier de pommes de terres</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Pigeonneau d'Ille-et-Vilaine</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">sur son lit de gnocchis aux légumes</p>
-                        <p class="menu__box--prix">44€</p>
+                        <p class="menu__box--plat">Pigeonneau d'Ille-et-Vilaine</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Sur son lit de gnocchis aux légumes</p>
+                            <p class="menu__box--prix">44€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">DESSERTS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Pétales de violettes glacés</p>
-                    <div class="menu__box--content">
-                        <p class="menu__box--misc">Et purée de noisettes</p>
-                        <p class="menu__box--prix">18€</p>
-                    </div>
-                </button>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Fondant au chocolat</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Revisité</p>
-                        <p class="menu__box--prix">22€</p>
+                        <p class="menu__box--plat">Pétales de violettes glacés</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et purée de noisettes</p>
+                            <p class="menu__box--prix">18€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Millefeuille au chocolat</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Myrtilles et pâte d'amande</p>
-                        <p class="menu__box--prix">23€</p>
+                        <p class="menu__box--plat">Fondant au chocolat</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Revisité</p>
+                            <p class="menu__box--prix">22€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="menu__box--btn">
+                    <div class="menu__box--content">
+                        <p class="menu__box--plat">Millefeuille croustillant</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Myrtilles et pâte d'amande</p>
+                            <p class="menu__box--prix">23€</p>
+                        </div>
+                    </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>    
             </div>  
 
             <div class="order">
-                <button class="order--btn">Commander</button>
+                <a class="order--btn">Commander</a>
             </div>
-            
+
         </section>
         
         <!--FOOTER-->
@@ -127,7 +180,7 @@
                 <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                 <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <li>Contact</li>
+                <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
         </footer>
     </body>
