--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li>Contact</li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
                 </ul>
             </footer>
     </body>
