--- a/rest4.html
+++ b/rest4.html
@@ -30,92 +30,145 @@
         <section class="menu">
             <div class="menu__title">
                 <h1>Le délice des sens</h1>
-                <img class="menu__heart" src="/images/icons/heart.svg"/>
+                <div class="icons menu__heart">
+                    <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                    <svg class="heart_background" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                        <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
+                    </svg>
+                </div>
             </div>
 
             <h4 class="menu__subtitle">ENTRÉES</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Tartare de thon</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Assaisonné de yuzu</p>
-                        <p class="menu__box--prix">25€</p>
+                        <p class="menu__box--plat">Tartare de thon</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Assaisonné au yuzu</p>
+                            <p class="menu__box--prix">25€</p>
+                        </div>      
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Bouchée de homard croustillant</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et sa farandole de petits légumes</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Bouchée de homard croustillant</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et sa farandole de petits légumes</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Velouté de cèpes</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Aux truffes</p>
-                        <p class="menu__box--prix">20€</p>
+                        <p class="menu__box--plat">Velouté de cèpes</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Aux truffes</p>
+                            <p class="menu__box--prix">20€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">PLATS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Poulet rôti aux herbes de provence</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et sa crème de truffe</p>
-                        <p class="menu__box--prix">40€</p>
+                        <p class="menu__box--plat">Poulet rôti aux herbes de provence</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et sa crème de truffe</p>
+                            <p class="menu__box--prix">40€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Langouste rôtie</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et ses légumes de saison</p>
-                        <p class="menu__box--prix">35€</p>
+                        <p class="menu__box--plat">Langouste rôtie</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et ses légumes de saison</p>
+                            <p class="menu__box--prix">35€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Côte de boeuf angus</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Et sa purée de panais</p>
-                        <p class="menu__box--prix">44€</p>
+                        <p class="menu__box--plat">Côte de boeuf angus</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Et sa purée de panais</p>
+                            <p class="menu__box--prix">44€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
             </div>
 
             <h4 class="menu__subtitle">DESSERTS</h4>
             <div class="menu__box">
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Farandole de desserts</p>
-                    <div class="menu__box--content">
-                        <p class="menu__box--misc">Du chef</p>
-                        <p class="menu__box--prix">18€</p>
-                    </div>
-                </button>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Crème brulée</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">Revisitée</p>
-                        <p class="menu__box--prix">22€</p>
+                        <p class="menu__box--plat">Farandole de desserts</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Du chef</p>
+                            <p class="menu__box--prix">18€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
 
-                <button class="menu__box--btn">
-                    <p class="menu__box--plat">Tiramisu</p>
+                <a href="#" class="menu__box--btn">
                     <div class="menu__box--content">
-                        <p class="menu__box--misc">À la noisette</p>
-                        <p class="menu__box--prix">23€</p>
+                        <p class="menu__box--plat">Crème brulée</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">Revisitée</p>
+                            <p class="menu__box--prix">22€</p>
+                        </div>
                     </div>
-                </button>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="menu__box--btn">
+                    <div class="menu__box--content">
+                        <p class="menu__box--plat">Tiramisu</p>
+                        <div class="menu__box--sub">
+                            <p class="menu__box--misc">À la noisette</p>
+                            <p class="menu__box--prix">23€</p>
+                        </div>
+                    </div>
+                    <div class="menu__box--validate">
+                        <i class="fa-solid fa-circle-check fa-lg"></i>
+                    </div>
+                </a>    
             </div>  
 
             <div class="order">
-                <button class="order--btn">Commander</button>
+                <a class="order--btn">Commander</a>
             </div>
             
         </section>
@@ -127,7 +180,7 @@
                 <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                 <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <li>Contact</li>
+                <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
         </footer>
     </body>
